# mcp_server_openai

./: .assistant_resume_settings.json  .assistant_resume_state.json  .dockerignore  .env.template  .gitignore  .mcp.json  .pre-commit-config.yaml  CODE_IMPROVEMENT_PLAN.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.document-generation  Dockerfile.image-generation  ENHANCED_PROMPT_MANAGER_SUMMARY.md  FINAL_ENDPOINT_SUMMARY.md  IMPLEMENTATION_STATUS_AND_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDIVIDUAL_ENDPOINTS_COMPLETE.md  INTEGRATION_COMPLETE.md  MCP_IMPLEMENTATION_PROGRESS.md  MCP_SERVER_IMPLEMENTATION_PROGRESS.md  Makefile  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  README-SECURITY.md  README.md  README_SIMPLE.md  README_UNIFIED_CONTENT.md  USAGE_TRACKING.md  bash.exe.stackdump  cloud-run-service.yaml  cloudrun-document-generation.yaml  config.example.yaml  config.yaml  docker-compose.yml  mypy.ini  package.json  params-content-create.json  params-enhanced-content-create.json  pyproject.toml  (+4 more)
.claude/: settings.local.json
.github/workflows/: auto-bootstrap.yml  ci.yml  regenerate.yml
config/: enhanced_content.yaml  enhanced_images.yaml  enhanced_ppt.yaml  mcp-servers-config.json  monitoring.yaml  mypy.ini  params-content-create.json  params-enhanced-content-create.json  params-enhanced-ppt-create.json  pytest.ini  unified_content.yaml  unified_system.yaml  unified_system_complete.yaml
data/: memory.db
deployment/: docker-compose.complete.yml  docker-compose.yml
deployment/cloud-run/: cloud-run-service.yaml  cloudrun-document-generation.yaml  config.example.yaml  config.yaml
deployment/docker/: Dockerfile  Dockerfile.document-generation  Dockerfile.enhanced  Dockerfile.icon-generation  Dockerfile.image-generation  Dockerfile.unified
deployment/scripts/: deploy-complete-system.sh  deploy-document-generation.sh  deploy-optimized.sh  deploy-to-cloud-run.sh  deploy-unified-system.sh  deploy-unified-to-cloud-run.sh
docs/: API_REFERENCE.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIMIZATION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  HTML_TOOL_IMPLEMENTATION_STATUS.md  PROJECT_SUMMARY.md  README-SECURITY.md  TESTING_GUIDE.md  TOOL_ARCHITECTURE_WORKFLOW.md  UNIFIED_SYSTEM_GUIDE.md  USAGE_TRACKING.md  content_validation_tool.md
output/documents/: Comprehensive_Test.html  Test_Document.html  Test_HTML_Content.html
scripts/: call_tool.py  demo_content_validation.py  demo_enhanced_content.py  demo_enhanced_ppt.py  demo_unified_content.py  deploy-document-generation.sh  deploy-unified-system.sh  install_system_prereqs.sh  install_user_prereqs.sh  preflight.py  register_mcp_configs.sh  run.sh  startup.py  test_advanced_orchestration.py  test_all_endpoints.py  test_complete_system.py  test_core_functionality.py  test_mcp_servers.py  test_new_mcp_servers.py  test_unified_system.py
scripts/demos/: demo_content_validation.py  demo_enhanced_content.py  demo_enhanced_document.py  demo_enhanced_ppt.py  demo_unified_content.py
scripts/development/: call_tool.py
tests/: test_cli.py  test_config.py  test_content_creator.py  test_core_config.py  test_core_error_handler.py  test_enhanced_content_creator.py  test_enhanced_ppt_generator.py  test_enhanced_prompt_manager.py  test_http_server.py  test_logging_utils.py  test_math_tools.py  test_monitoring.py  test_progress.py  test_prompt_manager.py  test_prompts.py  test_resources.py  test_sanity.py  test_streaming_http.py  test_web_tools.py  test_web_tools_progress.py
tools/: notify.ps1  statusline-manager.sh
(+108 files in other folders)
